--- a/labs-ios-starter/CityDashboard.storyboard
+++ b/labs-ios-starter/CityDashboard.storyboard
@@ -73,9 +73,9 @@
                                                 </textView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City property" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ccw-aE-svc">
                                                     <rect key="frame" x="25.5" y="10" width="125" height="40"/>
+                                                    <accessibility key="accessibilityConfiguration" identifier="City Property"/>
                                                     <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="20"/>
                                                     <color key="textColor" name="DarkBlue"/>
-                                                    <accessibility key="accessibilityConfiguration" identifier="City Property"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -204,7 +204,7 @@ CA</string>
                                                 <rect key="frame" x="0.0" y="0.0" width="36" height="27"/>
                                                 <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="17"/>
                                                 <state key="normal" title="Back">
-                                                    <color key="titleColor" name="MedBlue"/>
+                                                    <color key="titleColor" name="OffWhite"/>
                                                 </state>
                                                 <connections>
                                                     <action selector="backButtonPressed:" destination="6dv-8n-cwv" eventType="touchUpInside" id="xCU-p3-Vgn"/>
@@ -215,9 +215,9 @@ CA</string>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="City name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qen-Oz-npl">
                                                         <rect key="frame" x="0.0" y="0.0" width="141" height="43"/>
+                                                        <accessibility key="accessibilityConfiguration" identifier="City name"/>
                                                         <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="30"/>
                                                         <color key="textColor" name="OffWhite"/>
-                                                        <accessibility key="accessibilityConfiguration" identifier="City name"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Population" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8YC-J3-bhI">
@@ -295,8 +295,8 @@ CA</string>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fEm-Bi-W8O">
                                                 <rect key="frame" x="0.0" y="0.0" width="29.5" height="27"/>
-                                                <color key="tintColor" name="AccentGreen"/>
                                                 <accessibility key="accessibilityConfiguration" identifier="homeButton"/>
+                                                <color key="tintColor" name="AccentGreen"/>
                                                 <state key="normal">
                                                     <imageReference key="image" image="house.fill" catalog="system" symbolScale="large"/>
                                                 </state>
@@ -306,8 +306,8 @@ CA</string>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vep-7p-PD8">
                                                 <rect key="frame" x="109.5" y="0.0" width="23.5" height="27"/>
-                                                <color key="tintColor" name="AccentGreen"/>
                                                 <accessibility key="accessibilityConfiguration" identifier="pinnedList"/>
+                                                <color key="tintColor" name="AccentGreen"/>
                                                 <state key="normal">
                                                     <imageReference key="image" image="pin.fill" catalog="system" symbolScale="large"/>
                                                 </state>
@@ -409,9 +409,6 @@ CA</string>
         </namedColor>
         <namedColor name="DarkishBlue">
             <color red="0.19200000166893005" green="0.40000000596046448" blue="0.56099998950958252" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="MedBlue">
-            <color red="0.059000000357627869" green="0.37299999594688416" blue="0.65100002288818359" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="OffWhite">
             <color red="0.9649999737739563" green="0.9570000171661377" blue="0.95300000905990601" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
