--- a/labs-ios-starter/Favorites/Favorites.storyboard
+++ b/labs-ios-starter/Favorites/Favorites.storyboard
@@ -55,7 +55,7 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A52-SH-Qyx">
                                                     <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4jT-R8-b6T">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="4jT-R8-b6T">
                                                             <rect key="frame" x="20" y="23.5" width="68.5" height="33"/>
                                                             <accessibility key="accessibilityConfiguration" identifier="cityLabel"/>
                                                             <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="28"/>
@@ -75,6 +75,7 @@
                                                         <constraint firstItem="4jT-R8-b6T" firstAttribute="leading" secondItem="A52-SH-Qyx" secondAttribute="leading" constant="20" id="Gbi-5U-3dT"/>
                                                         <constraint firstAttribute="trailing" secondItem="6hj-Vw-4aT" secondAttribute="trailing" constant="20" id="Gdq-tR-qKN"/>
                                                         <constraint firstAttribute="height" constant="80" id="ORy-HR-N6A"/>
+                                                        <constraint firstItem="6hj-Vw-4aT" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="4jT-R8-b6T" secondAttribute="trailing" constant="20" id="RQN-DM-08I"/>
                                                         <constraint firstAttribute="width" constant="320" id="aWr-kq-SDN"/>
                                                         <constraint firstItem="6hj-Vw-4aT" firstAttribute="centerY" secondItem="A52-SH-Qyx" secondAttribute="centerY" id="eXd-Uh-4hw"/>
                                                     </constraints>
@@ -225,7 +226,7 @@
             <color red="0.28999999165534973" green="0.4779999852180481" blue="0.54900002479553223" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="DarkBlue">
-            <color red="0.062745098039215685" green="0.27058823529411763" blue="0.45098039215686275" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.063000001013278961" green="0.27099999785423279" blue="0.45100000500679016" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="DarkishBlue">
             <color red="0.19200000166893005" green="0.40000000596046448" blue="0.56099998950958252" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
