--- a/labs-ios-starter/CityDashboard.storyboard
+++ b/labs-ios-starter/CityDashboard.storyboard
@@ -6,6 +6,7 @@
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -259,7 +260,7 @@ CA</string>
                                                     <constraint firstAttribute="height" constant="40" id="w1D-bH-fE2"/>
                                                 </constraints>
                                                 <color key="tintColor" name="DarkishBlue"/>
-                                                <state key="normal" image="map" catalog="system">
+                                                <state key="normal" image="ellipsis" catalog="system">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <userDefinedRuntimeAttributes>
@@ -269,7 +270,7 @@ CA</string>
                                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                 </userDefinedRuntimeAttributes>
                                                 <connections>
-                                                    <segue destination="Wwu-9L-BgQ" kind="presentation" identifier="MapSegue" modalPresentationStyle="automatic" id="2uH-C9-jPl"/>
+                                                    <action selector="moreButtonTapped:" destination="6dv-8n-cwv" eventType="touchUpInside" id="PT1-Jg-cjf"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -369,6 +370,8 @@ CA</string>
                         <outlet property="pinToProfileButton" destination="79Q-YI-zcB" id="sc6-Iw-Wtk"/>
                         <outlet property="populationLabel" destination="8YC-J3-bhI" id="EOS-zL-EB1"/>
                         <outlet property="similarCitiesCollectionView" destination="WwL-gZ-20c" id="pUH-Fs-SIO"/>
+                        <segue destination="Kc7-8Z-ohD" kind="presentation" identifier="weatherSegue" id="stD-2O-dWm"/>
+                        <segue destination="Wwu-9L-BgQ" kind="presentation" identifier="MapSegue" id="8Gb-Dq-7if"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TQy-aU-bCa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -385,12 +388,106 @@ CA</string>
             </objects>
             <point key="canvasLocation" x="347" y="121"/>
         </scene>
+        <!--Weather View Controller-->
+        <scene sceneID="2xE-PV-5Oj">
+            <objects>
+                <viewController id="Kc7-8Z-ohD" customClass="WeatherViewController" customModule="labs_ios_starter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="B9T-RB-LMb">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BlueMap" translatesAutoresizingMaskIntoConstraints="NO" id="0Ra-U6-M3T">
+                                <rect key="frame" x="-389.5" y="0.0" width="1193" height="858"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vH3-tc-VFQ">
+                                <rect key="frame" x="0.0" y="-50" width="414" height="128"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o4j-yA-lIS">
+                                        <rect key="frame" x="20" y="75" width="134" height="33"/>
+                                        <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="28"/>
+                                        <color key="textColor" name="OffWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TuE-qm-kXe">
+                                        <rect key="frame" x="355" y="76" width="39" height="32"/>
+                                        <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="17"/>
+                                        <state key="normal" title="Done">
+                                            <color key="titleColor" name="OffWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="doneButtonPressed:" destination="Kc7-8Z-ohD" eventType="touchUpInside" id="Zsj-lD-33k"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" name="DarkishBlue"/>
+                                <constraints>
+                                    <constraint firstItem="o4j-yA-lIS" firstAttribute="leading" secondItem="vH3-tc-VFQ" secondAttribute="leading" constant="20" id="3bT-R7-j4r"/>
+                                    <constraint firstAttribute="trailing" secondItem="TuE-qm-kXe" secondAttribute="trailing" constant="20" id="4o4-kM-voh"/>
+                                    <constraint firstAttribute="bottom" secondItem="o4j-yA-lIS" secondAttribute="bottom" constant="20" id="7v4-f3-Uqg"/>
+                                    <constraint firstAttribute="bottom" secondItem="TuE-qm-kXe" secondAttribute="bottom" constant="20" id="MkX-6Z-Xde"/>
+                                    <constraint firstAttribute="height" constant="128" id="bzm-3K-gr1"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wQV-w7-3Fe">
+                                <rect key="frame" x="40" y="138" width="334" height="285"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BNN-Lx-ZbZ">
+                                <rect key="frame" x="40" y="483" width="334" height="285"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Average Low Temperature" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JfE-yM-Ul0">
+                                <rect key="frame" x="40" y="104" width="245" height="24"/>
+                                <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="20"/>
+                                <color key="textColor" name="DarkBlue"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Average High Temperature" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bHe-nL-SnL">
+                                <rect key="frame" x="40" y="449" width="248" height="24"/>
+                                <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="20"/>
+                                <color key="textColor" name="DarkBlue"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="fkV-ql-ZdZ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="fkV-ql-ZdZ" firstAttribute="trailing" secondItem="vH3-tc-VFQ" secondAttribute="trailing" id="1CI-Lk-5qH"/>
+                            <constraint firstItem="BNN-Lx-ZbZ" firstAttribute="leading" secondItem="fkV-ql-ZdZ" secondAttribute="leading" constant="40" id="99w-OY-MK4"/>
+                            <constraint firstItem="wQV-w7-3Fe" firstAttribute="top" secondItem="JfE-yM-Ul0" secondAttribute="bottom" constant="10" id="AW7-oJ-RuI"/>
+                            <constraint firstItem="bHe-nL-SnL" firstAttribute="leading" secondItem="fkV-ql-ZdZ" secondAttribute="leading" constant="40" id="D3G-nk-FCf"/>
+                            <constraint firstItem="fkV-ql-ZdZ" firstAttribute="bottom" secondItem="0Ra-U6-M3T" secondAttribute="bottom" constant="-50" id="FlH-vl-gIe"/>
+                            <constraint firstItem="0Ra-U6-M3T" firstAttribute="top" secondItem="fkV-ql-ZdZ" secondAttribute="top" id="HSE-0e-VN1"/>
+                            <constraint firstItem="fkV-ql-ZdZ" firstAttribute="bottom" secondItem="BNN-Lx-ZbZ" secondAttribute="bottom" constant="40" id="HTn-ua-Cyu"/>
+                            <constraint firstItem="wQV-w7-3Fe" firstAttribute="top" secondItem="vH3-tc-VFQ" secondAttribute="bottom" constant="60" id="INI-XZ-WbZ"/>
+                            <constraint firstItem="0Ra-U6-M3T" firstAttribute="centerX" secondItem="B9T-RB-LMb" secondAttribute="centerX" id="Pbe-N2-9Pq"/>
+                            <constraint firstItem="vH3-tc-VFQ" firstAttribute="top" secondItem="fkV-ql-ZdZ" secondAttribute="top" constant="-50" id="Tvg-di-qlt"/>
+                            <constraint firstItem="BNN-Lx-ZbZ" firstAttribute="top" secondItem="wQV-w7-3Fe" secondAttribute="bottom" constant="60" id="YIm-P3-xR7"/>
+                            <constraint firstItem="fkV-ql-ZdZ" firstAttribute="trailing" secondItem="BNN-Lx-ZbZ" secondAttribute="trailing" constant="40" id="YUD-Qf-z4q"/>
+                            <constraint firstItem="BNN-Lx-ZbZ" firstAttribute="top" secondItem="bHe-nL-SnL" secondAttribute="bottom" constant="10" id="cK4-Jl-3kc"/>
+                            <constraint firstItem="JfE-yM-Ul0" firstAttribute="leading" secondItem="fkV-ql-ZdZ" secondAttribute="leading" constant="40" id="dEN-GV-h0P"/>
+                            <constraint firstItem="fkV-ql-ZdZ" firstAttribute="trailing" secondItem="wQV-w7-3Fe" secondAttribute="trailing" constant="40" id="gOR-bV-tpt"/>
+                            <constraint firstItem="BNN-Lx-ZbZ" firstAttribute="height" secondItem="wQV-w7-3Fe" secondAttribute="height" id="lah-kD-eMK"/>
+                            <constraint firstItem="wQV-w7-3Fe" firstAttribute="leading" secondItem="fkV-ql-ZdZ" secondAttribute="leading" constant="40" id="m0u-E9-7tS"/>
+                            <constraint firstItem="vH3-tc-VFQ" firstAttribute="leading" secondItem="fkV-ql-ZdZ" secondAttribute="leading" id="xht-1v-eXW"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="cityLabel" destination="o4j-yA-lIS" id="RBM-20-h2R"/>
+                        <outlet property="highTempView" destination="BNN-Lx-ZbZ" id="aFe-X6-xpF"/>
+                        <outlet property="lowTempView" destination="wQV-w7-3Fe" id="l5F-kc-XD6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="haO-nr-fbO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="575" y="601"/>
+        </scene>
     </scenes>
     <resources>
         <image name="BlueMap" width="1193" height="1788"/>
+        <image name="ellipsis" catalog="system" width="128" height="37"/>
         <image name="gearshape.fill" catalog="system" width="128" height="121"/>
         <image name="house.fill" catalog="system" width="128" height="106"/>
-        <image name="map" catalog="system" width="128" height="110"/>
         <image name="pin" catalog="system" width="119" height="128"/>
         <image name="pin.fill" catalog="system" width="119" height="128"/>
         <namedColor name="AccentGreen">
@@ -408,5 +505,8 @@ CA</string>
         <namedColor name="VeryLightBlue">
             <color red="0.79199999570846558" green="0.85900002717971802" blue="0.88999998569488525" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
