--- a/labs-ios-starter/CityDashboard.storyboard
+++ b/labs-ios-starter/CityDashboard.storyboard
@@ -399,6 +399,10 @@ CA</string>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BlueMap" translatesAutoresizingMaskIntoConstraints="NO" id="0Ra-U6-M3T">
                                 <rect key="frame" x="-389.5" y="0.0" width="1193" height="858"/>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h4j-uv-jdN">
+                                <rect key="frame" x="18" y="136" width="378" height="279"/>
+                                <color key="backgroundColor" name="DarkishBlue"/>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vH3-tc-VFQ">
                                 <rect key="frame" x="0.0" y="-50" width="414" height="128"/>
                                 <subviews>
@@ -428,13 +432,17 @@ CA</string>
                                     <constraint firstAttribute="height" constant="128" id="bzm-3K-gr1"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wQV-w7-3Fe">
-                                <rect key="frame" x="40" y="138" width="334" height="285"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yns-pc-Wik">
+                                <rect key="frame" x="18" y="491" width="378" height="279"/>
+                                <color key="backgroundColor" name="DarkishBlue"/>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BNN-Lx-ZbZ">
-                                <rect key="frame" x="40" y="483" width="334" height="285"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wQV-w7-3Fe" customClass="SCNView">
+                                <rect key="frame" x="20" y="138" width="374" height="275"/>
+                                <color key="backgroundColor" name="PalestBlue"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BNN-Lx-ZbZ" customClass="SCNView">
+                                <rect key="frame" x="20" y="493" width="374" height="275"/>
+                                <color key="backgroundColor" name="PalestBlue"/>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Average Low Temperature" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JfE-yM-Ul0">
                                 <rect key="frame" x="40" y="104" width="245" height="24"/>
@@ -443,7 +451,7 @@ CA</string>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Average High Temperature" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bHe-nL-SnL">
-                                <rect key="frame" x="40" y="449" width="248" height="24"/>
+                                <rect key="frame" x="40" y="459" width="248" height="24"/>
                                 <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="20"/>
                                 <color key="textColor" name="DarkBlue"/>
                                 <nil key="highlightedColor"/>
@@ -453,29 +461,37 @@ CA</string>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="fkV-ql-ZdZ" firstAttribute="trailing" secondItem="vH3-tc-VFQ" secondAttribute="trailing" id="1CI-Lk-5qH"/>
-                            <constraint firstItem="BNN-Lx-ZbZ" firstAttribute="leading" secondItem="fkV-ql-ZdZ" secondAttribute="leading" constant="40" id="99w-OY-MK4"/>
+                            <constraint firstItem="h4j-uv-jdN" firstAttribute="height" secondItem="wQV-w7-3Fe" secondAttribute="height" constant="4" id="8FP-JR-vAu"/>
+                            <constraint firstItem="BNN-Lx-ZbZ" firstAttribute="leading" secondItem="fkV-ql-ZdZ" secondAttribute="leading" constant="20" id="99w-OY-MK4"/>
                             <constraint firstItem="wQV-w7-3Fe" firstAttribute="top" secondItem="JfE-yM-Ul0" secondAttribute="bottom" constant="10" id="AW7-oJ-RuI"/>
                             <constraint firstItem="bHe-nL-SnL" firstAttribute="leading" secondItem="fkV-ql-ZdZ" secondAttribute="leading" constant="40" id="D3G-nk-FCf"/>
+                            <constraint firstItem="Yns-pc-Wik" firstAttribute="height" secondItem="BNN-Lx-ZbZ" secondAttribute="height" constant="4" id="DuX-2d-kGX"/>
                             <constraint firstItem="fkV-ql-ZdZ" firstAttribute="bottom" secondItem="0Ra-U6-M3T" secondAttribute="bottom" constant="-50" id="FlH-vl-gIe"/>
                             <constraint firstItem="0Ra-U6-M3T" firstAttribute="top" secondItem="fkV-ql-ZdZ" secondAttribute="top" id="HSE-0e-VN1"/>
                             <constraint firstItem="fkV-ql-ZdZ" firstAttribute="bottom" secondItem="BNN-Lx-ZbZ" secondAttribute="bottom" constant="40" id="HTn-ua-Cyu"/>
+                            <constraint firstItem="Yns-pc-Wik" firstAttribute="centerY" secondItem="BNN-Lx-ZbZ" secondAttribute="centerY" id="I0e-vp-Qfv"/>
                             <constraint firstItem="wQV-w7-3Fe" firstAttribute="top" secondItem="vH3-tc-VFQ" secondAttribute="bottom" constant="60" id="INI-XZ-WbZ"/>
                             <constraint firstItem="0Ra-U6-M3T" firstAttribute="centerX" secondItem="B9T-RB-LMb" secondAttribute="centerX" id="Pbe-N2-9Pq"/>
+                            <constraint firstItem="h4j-uv-jdN" firstAttribute="width" secondItem="wQV-w7-3Fe" secondAttribute="width" constant="4" id="Rw0-XZ-oPD"/>
                             <constraint firstItem="vH3-tc-VFQ" firstAttribute="top" secondItem="fkV-ql-ZdZ" secondAttribute="top" constant="-50" id="Tvg-di-qlt"/>
-                            <constraint firstItem="BNN-Lx-ZbZ" firstAttribute="top" secondItem="wQV-w7-3Fe" secondAttribute="bottom" constant="60" id="YIm-P3-xR7"/>
-                            <constraint firstItem="fkV-ql-ZdZ" firstAttribute="trailing" secondItem="BNN-Lx-ZbZ" secondAttribute="trailing" constant="40" id="YUD-Qf-z4q"/>
+                            <constraint firstItem="BNN-Lx-ZbZ" firstAttribute="top" secondItem="wQV-w7-3Fe" secondAttribute="bottom" constant="80" id="YIm-P3-xR7"/>
+                            <constraint firstItem="fkV-ql-ZdZ" firstAttribute="trailing" secondItem="BNN-Lx-ZbZ" secondAttribute="trailing" constant="20" id="YUD-Qf-z4q"/>
                             <constraint firstItem="BNN-Lx-ZbZ" firstAttribute="top" secondItem="bHe-nL-SnL" secondAttribute="bottom" constant="10" id="cK4-Jl-3kc"/>
                             <constraint firstItem="JfE-yM-Ul0" firstAttribute="leading" secondItem="fkV-ql-ZdZ" secondAttribute="leading" constant="40" id="dEN-GV-h0P"/>
-                            <constraint firstItem="fkV-ql-ZdZ" firstAttribute="trailing" secondItem="wQV-w7-3Fe" secondAttribute="trailing" constant="40" id="gOR-bV-tpt"/>
+                            <constraint firstItem="fkV-ql-ZdZ" firstAttribute="trailing" secondItem="wQV-w7-3Fe" secondAttribute="trailing" constant="20" id="gOR-bV-tpt"/>
+                            <constraint firstItem="Yns-pc-Wik" firstAttribute="width" secondItem="BNN-Lx-ZbZ" secondAttribute="width" constant="4" id="hfN-aT-MdC"/>
                             <constraint firstItem="BNN-Lx-ZbZ" firstAttribute="height" secondItem="wQV-w7-3Fe" secondAttribute="height" id="lah-kD-eMK"/>
-                            <constraint firstItem="wQV-w7-3Fe" firstAttribute="leading" secondItem="fkV-ql-ZdZ" secondAttribute="leading" constant="40" id="m0u-E9-7tS"/>
+                            <constraint firstItem="wQV-w7-3Fe" firstAttribute="leading" secondItem="fkV-ql-ZdZ" secondAttribute="leading" constant="20" id="m0u-E9-7tS"/>
+                            <constraint firstItem="h4j-uv-jdN" firstAttribute="centerX" secondItem="wQV-w7-3Fe" secondAttribute="centerX" id="o4M-VX-eQE"/>
+                            <constraint firstItem="Yns-pc-Wik" firstAttribute="centerX" secondItem="BNN-Lx-ZbZ" secondAttribute="centerX" id="p1B-b9-hqt"/>
+                            <constraint firstItem="h4j-uv-jdN" firstAttribute="centerY" secondItem="wQV-w7-3Fe" secondAttribute="centerY" id="vMI-J5-k4e"/>
                             <constraint firstItem="vH3-tc-VFQ" firstAttribute="leading" secondItem="fkV-ql-ZdZ" secondAttribute="leading" id="xht-1v-eXW"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="cityLabel" destination="o4j-yA-lIS" id="RBM-20-h2R"/>
-                        <outlet property="highTempView" destination="BNN-Lx-ZbZ" id="aFe-X6-xpF"/>
-                        <outlet property="lowTempView" destination="wQV-w7-3Fe" id="l5F-kc-XD6"/>
+                        <outlet property="highView" destination="BNN-Lx-ZbZ" id="ase-Vt-LVb"/>
+                        <outlet property="lowView" destination="wQV-w7-3Fe" id="DFa-Lw-w8b"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="haO-nr-fbO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -501,6 +517,9 @@ CA</string>
         </namedColor>
         <namedColor name="OffWhite">
             <color red="0.9649999737739563" green="0.9570000171661377" blue="0.95300000905990601" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="PalestBlue">
+            <color red="0.89399999380111694" green="0.92900002002716064" blue="0.94499999284744263" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="VeryLightBlue">
             <color red="0.79199999570846558" green="0.85900002717971802" blue="0.88999998569488525" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
